<resources>
    <string name="app_name">TEC COMM</string>

    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_enable">Enable</string>
    <string name="action_disable">Disable</string>
    <string name="terminal_clear">Clear Terminal</string>
    <string name="rename_device">Rename</string>

    <string name="connections">Connections</string>
    <string name="connections_desc">Add, Manage, and View your Connections</string>
    <string name="terminal">Terminal</string>
    <string name="terminal_desc">Send and receive data</string>
    <string name="commands">Commands</string>
    <string name="commands_desc">Build and send preset messages</string>
    <string name="controls">Controls</string>
    <string name="controls_desc">Create custom control interfaces</string>
    <string name="settings">Settings</string>

    <string name="instructions_message">Click "+" to add new Connections!</string>
    <string name="new_connection_activity_title">Add New Connection</string>
    <string name="new_connection_name">Name:</string>
    <string name="new_connection_type">Type:</string>

    <string name="connection_type_bluetooth">Bluetooth</string>
    <string name="connection_type_tcpip">TCP/IP</string>
    <string name="connection_type_usb_host">USB Host</string>

    <string name="connection_bluetooth_searching">Searching for Bluetooth Devices:</string>
    <string name="connection_new_tcpip_host_label">Enter Host:</string>
    <string name="connection_new_tcpip_port_label">Enter Port:</string>

    <string name="string_mode">String</string>
    <string name="hex_mode">Hex</string>
    <string name="binary_mode">Binary</string>

    <string name="hex0">0</string>
    <string name="hex1">1</string>
    <string name="hex2">2</string>
    <string name="hex3">3</string>
    <string name="hex4">4</string>
    <string name="hex5">5</string>
    <string name="hex6">6</string>
    <string name="hex7">7</string>
    <string name="hex8">8</string>
    <string name="hex9">9</string>
    <string name="hexA">A</string>
    <string name="hexB">B</string>
    <string name="hexC">C</string>
    <string name="hexD">D</string>
    <string name="hexE">E</string>
    <string name="hexF">F</string>
    <string name="bin0">0</string>
    <string name="bin1">1</string>
</resources>
