<?xml version="1.0" encoding="utf-8"?>
<org.tec_hub.tecuniversalcomm.data.inputs.InputHex
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text"
            style="@android:style/Widget.EditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/buttonBarButtonStyle"
            android:text="Send" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/hex0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?attr/buttonBarButtonStyle"
                    android:text="@string/hex0"/>

                <Button
                    android:id="@+id/hex1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?attr/buttonBarButtonStyle"
                    android:text="@string/hex1"/>

                <Button
                    android:id="@+id/hex2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?attr/buttonBarButtonStyle"
                    android:text="@string/hex2"/>

                <Button
                    android:id="@+id/hex3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?attr/buttonBarButtonStyle"
                    android:text="@string/hex3"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/hex4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?attr/buttonBarButtonStyle"
                    android:text="@string/hex4"/>

                <Button
                    android:id="@+id/hex5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?attr/buttonBarButtonStyle"
                    android:text="@string/hex5"/>

                <Button
                    android:id="@+id/hex6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?attr/buttonBarButtonStyle"
                    android:text="@string/hex6"/>

                <Button
                    android:id="@+id/hex7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?attr/buttonBarButtonStyle"
                    android:text="@string/hex7"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?attr/buttonBarStyle"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/hex8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?attr/buttonBarButtonStyle"
                    android:text="@string/hex8"/>

                <Button
                    android:id="@+id/hex9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?attr/buttonBarButtonStyle"
                    android:text="@string/hex9"/>

                <Button
                    android:id="@+id/hexA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?attr/buttonBarButtonStyle"
                    android:text="@string/hexA"/>

                <Button
                    android:id="@+id/hexB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?attr/buttonBarButtonStyle"
                    android:text="@string/hexB"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?attr/buttonBarStyle"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/hexC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?attr/buttonBarButtonStyle"
                    android:text="@string/hexC"/>

                <Button
                    android:id="@+id/hexD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?attr/buttonBarButtonStyle"
                    android:text="@string/hexD"/>

                <Button
                    android:id="@+id/hexE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?attr/buttonBarButtonStyle"
                    android:text="@string/hexE"/>

                <Button
                    android:id="@+id/hexF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="?attr/buttonBarButtonStyle"
                    android:text="@string/hexF"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id='@+id/backspace'
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Backspace" />

    </LinearLayout>

</org.tec_hub.tecuniversalcomm.data.inputs.InputHex>